# f9p_bringup_ros2

./: CMakeLists.txt  README.md  package.xml
launch/: f9p_ntrip.launch.py  f9p_ntrip_foxglove.launch.py  f9p_ntrip_rviz.launch.py
rviz/: f9p_satellite.rviz
udev/: 99-ublox-gps.rules  install_udev_rule.sh
